explicit locale for string operations